@@ -1,4 +1,3 @@
-
 /**
  * Title: tn5250J
  * Copyright:   Copyright (c) 2001
@@ -26,104 +25,87 @@
  */
 package org.tn5250j.tools;
 
-import java.io.*;
-import javax.swing.*;
-import java.awt.Frame;
+import java.awt.Component;
+import java.io.File;
+import java.io.FileNotFoundException;
+import java.io.FileOutputStream;
+import java.io.IOException;
 
-import org.tn5250j.tools.logging.*;
+import javax.swing.JFileChooser;
+
 import org.tn5250j.framework.tn5250.Screen5250;
 import org.tn5250j.gui.TN5250jFileChooser;
+import org.tn5250j.gui.TN5250jFileFilter;
+import org.tn5250j.tools.logging.TN5250jLogFactory;
+import org.tn5250j.tools.logging.TN5250jLogger;
 
 public class SendScreenToFile {
 
-   Screen5250 screen;
-   private TN5250jLogger log = TN5250jLogFactory.getLogger (this.getClass());
+	private static final TN5250jLogger LOG = TN5250jLogFactory
+			.getLogger(SendScreenToFile.class);
 
-   //  Change sent by Luc - LDC to pass a parent frame like the other dialogs
-   Frame  parent;
+	/**
+	 * @param parent
+	 * @param screen
+	 */
+	public static final void showDialog(Component parent, Screen5250 screen) {
+		String workingDir = System.getProperty("user.dir");
+		TN5250jFileChooser fileChooser = new TN5250jFileChooser(workingDir);
+		fileChooser.setFileSelectionMode(JFileChooser.FILES_ONLY);
+		fileChooser.setFileFilter(new TN5250jFileFilter("txt", "Text files"));
 
-   public SendScreenToFile(Frame parent, Screen5250 scrn) {
+		// int ret = pcFileChooser.showSaveDialog(new JFrame());
+		int ret = fileChooser.showSaveDialog(parent);
 
-      screen = scrn;
-      this.parent = parent;
+		// check to see if something was actually chosen
+		if (ret == JFileChooser.APPROVE_OPTION) {
+			File file = fileChooser.getSelectedFile();
+			final String fname = file.getName();
+			if (fname.lastIndexOf('.') < 0) {
+				file = new File(file.toString() + ".txt");
+			}
 
-      try {
-         jbInit();
-      }
-      catch(Exception ex) {
-         log.warn("Error in constructor: "+ ex.getMessage());
+			StringBuffer sb = new StringBuffer();
+			char[] s = screen.getScreenAsChars();
+			int c = screen.getColumns();
+			int l = screen.getRows() * c;
+			int col = 0;
+			for (int x = 0; x < l; x++, col++) {
+				sb.append(s[x]);
+				if (col == c) {
+					sb.append('\n');
+					col = 0;
+				}
+			}
 
-      }
-   }
+			writeToFile(sb.toString(), file);
 
-   void jbInit() throws Exception {
-      getPCFile();
+		}
+	}
 
-   }
+	private static final void writeToFile(String sc, File file) {
 
-   /**
-    * Get the local file from a file chooser
-    */
-   private void getPCFile() {
+		FileOutputStream out = null;
+		try {
+			out = new FileOutputStream(file);
+			out.write(sc.getBytes());
+			out.flush();
+			out.close();
 
-      String workingDir = System.getProperty("user.dir");
-      TN5250jFileChooser pcFileChooser = new TN5250jFileChooser(workingDir);
+		} catch (FileNotFoundException fnfe) {
+			LOG.warn("fnfe: " + fnfe.getMessage());
+		} catch (IOException ioe) {
+			LOG.warn("ioe: " + ioe.getMessage());
+		} finally {
+			if (out != null)
+				try {
+					out.close();
+				} catch (IOException exc) {
+					LOG.warn("ioe finally: " + exc.getMessage());
+				}
 
-//      int ret = pcFileChooser.showSaveDialog(new JFrame());
-      int ret = pcFileChooser.showSaveDialog(parent);
+		}
 
-      // check to see if something was actually chosen
-      if (ret == JFileChooser.APPROVE_OPTION) {
-         File file = pcFileChooser.getSelectedFile();
-
-         StringBuffer sb = new StringBuffer();
-         char[] s = screen.getScreenAsChars();
-         int c = screen.getColumns();
-         int l = screen.getRows() * c;
-         int col = 0;
-         for (int x = 0; x < l; x++,col++) {
-            sb.append(s[x]);
-            if (col == c) {
-               sb.append('\n');
-               col = 0;
-            }
-         }
-
-         writeToFile(sb.toString(),file);
-
-      }
-
-   }
-
-
-   private void writeToFile(String sc,File file) {
-
-      FileOutputStream out = null;
-      try {
-         out = new FileOutputStream(file);
-         out.write(sc.getBytes());
-         out.flush();
-         out.close();
-
-      }
-      catch (FileNotFoundException fnfe) {
-         log.warn("fnfe: " + fnfe.getMessage());
-      }
-      catch (IOException ioe) {
-         log.warn("ioe: " + ioe.getMessage());
-      }
-      finally {
-         if (out != null)
-            try {
-               out.close();
-            }
-            catch (IOException exc) {
-               log.warn("ioe finally: " + exc.getMessage());
-            }
-
-      }
-
-
-   }
+	}
 
 }
